Grammar and spelling fixes in summary.

--- a/2-PageSummary/Summary.tex
+++ b/2-PageSummary/Summary.tex
@@ -51,7 +51,13 @@ Shuang Zhang
 \maketitle
 
 \section{Project Context and Objectives}
-%Who is your client? What problem did you have to solve? Why is that problem interesting or important?The Lighthouse team collaborated with Microsoft and the Guide Dog Associations to produce applications which can improve the living experience for the visually impaired users. Since few environments and applications were designed for the huge amount of blind and partly sighted individuals, it is difficult for them to moving around especially in an unfamiliar environment and without others’ assistance. Microsoft is both the sponsor and the client in this project. The particular field of study that the client wanted the team to explore was using wearable sensors which could be utilised by the visually impaired. Also, the client wanted low-cost, off-of-shelf hardware in this project. After analysing the requirements from the client, the Lighthouse team decided to find a way to improve the experience of visually impaired when entering an unfamiliar indoor environment.Finally, Lighthouse team created a platform for dynamic indoor obstacles mapping, which included an Obstacle API, a processing platform and an Android application to give user feedback. After testing, the quality of the project meet client's standards.
+%Who is your client? What problem did you have to solve? Why is that problem interesting or important?
+The Lighthouse team collaborated with Microsoft and the Guide Dog Associations to produce applications which can improve the experience of visually impaired users. Since few environments and applications were designed for the huge amount of blind and partly sighted individuals it is difficult for them to move around especially in an unfamiliar environment without assistance. 
+
+Microsoft is both the sponsor and the client in this project and particular field of study was to explore the use cases for wearable sensors in aiding the visually impaired in navigating an indoor environment. Also, the client wanted the team to use low-cost, off-of-shelf hardware in this project and to use a technique called sensor fusion to attain acceptable accuracy.
+
+Finally, Lighthouse team created a platform for dynamic indoor obstacles mapping using wearable sensors. Deliverables included an Obstacle API which allowed for querying for obstacles in an area, an obstacle processing platform and an Android application that collects data and gives users feedback. After testing, the quality of the project meet the client's expecations.
+
 \section{Achievements}
 %What software and other artifacts have you delivered?
 \subsection{Obstacle API}
