Some fixes on appendix

--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -387,7 +387,7 @@ The exploration of fusion models is large possibility of future work, the platfo
 In the future, when the project needs to be expanded with other types of sensors, this platform can still provide the interface for communication between device and processing component. 
 Although this product can fulfil the client's requirements, it has huge performance disparity with a real industry product. Since budget and experience are limited, the capability of the project is not sufficient to support thousands of simultaneous user queries at the moment.
 
-This project can be migrated to Azure which is a Microsoft product and can provide global coverage and high availability and stability. The components of the project need to be rewritten in C\# and Azure analogue technologies. Please refer to Appendix~\cite{app:MigrationPlan} for a detailed description of a possible migration strategy.
+This project can be migrated to Azure which is a Microsoft product and can provide global coverage and high availability and stability. The components of the project need to be rewritten in C\# and Azure analogue technologies. A detailed description of a possible migration strategy is provided in a separate document accompanying the group report.
 
 
 \section{Conclusion}
@@ -401,11 +401,11 @@ Both Microsoft and the visually impaired people can benefit from the Lighthouse 
 % not in context of the project but rather in the context of the domain. 
 
 % Appendix
-\appendix
-\section*{APPENDIX} \label{Appendix}
-\setcounter{section}{1}
+%\appendix
+%\section*{APPENDIX} \label{Appendix}
+%\setcounter{section}{1}
 
-\appendixhead{ZHOU}
+%\appendixhead{ZHOU}
 
 % Acknowledgments
 \begin{acks}
@@ -423,10 +423,6 @@ Both Microsoft and the visually impaired people can benefit from the Lighthouse 
 
 \medskip
 
-\section{Migration plan}
-\label{app:MigrationPlan}
-\section{This is an example of Appendix section head}
-
 \pagebreak
 \section{Spark Pipeline Figure}
 \label{app:SparkPipeline}
@@ -437,9 +433,7 @@ Both Microsoft and the visually impaired people can benefit from the Lighthouse 
 \caption{Spark processing pipeline}
 \end{figure}
 \clearpage
-\pagebreak
-\section{Architecture cost analysis}
-\label{ArchitectureCost}
+
 
 \section{Requirements}
 \begin{center}
