--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -419,11 +419,16 @@ Both Microsoft and the visually impaired people can benefit from the Lighthouse 
 %\received{February 2007}{March 2009}{June 2009}
 
 % Electronic Appendix
-\elecappendix
+%\elecappendix
 
 \medskip
 
 \pagebreak
+% Appendix
+\appendix
+\section*{APPENDIX} \label{Appendix}
+\setcounter{section}{0}
+
 \section{Spark Pipeline Figure}
 \label{app:SparkPipeline}
 \begin{figure}[!ht]
