--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -409,6 +409,7 @@ Both Microsoft and the visually impaired people can benefit from the Lighthouse 
 
 % Acknowledgments
 \begin{acks}
+The authors would like to thank Dr. Jenks Krinke for his helpful comments and suggestions on our development process and group report. Moreover, the authors are grateful to Mr. Saheed Busari who supervised us during the whole research and development phases and guided us with useful ideas. In addition, we appreciate the amount of time and efforts Mr. Jarnail Chudge spent on communication with us and guidance.
 \end{acks}  
 
 % Bibliography
