--- a/2-PageSummary/Summary.tex
+++ b/2-PageSummary/Summary.tex
@@ -55,7 +55,7 @@ The Lighthouse team collaborated with Microsoft and the Guide Dog Associations t
 
 Microsoft is both the sponsor and the client in this project and particular field of study was to explore the use cases for wearable sensors in aiding the visually impaired in navigating an indoor environment. Also, the client wanted the team to use low-cost, off-of-shelf hardware in this project and to use a technique called sensor fusion to attain acceptable accuracy.
 
-Finally, Lighthouse team created a platform for dynamic indoor obstacles mapping using wearable sensors. Deliverables included an Obstacle API which allowed for querying for obstacles in an area, an obstacle processing platform and an Android application that collects data and gives users feedback. After testing, the quality of the project meet the client's expecations.
+Finally, Lighthouse team created a platform for dynamic indoor obstacles mapping using wearable sensors. Deliverables included an Obstacle API which allowed for querying for obstacles in an area, an obstacle processing platform and an Android application that collects data and gives users feedback. After testing, the quality of the project meet the client's expectations.
 
 \section{Achievements}
 %What software and other artifacts have you delivered?
