Fixed typo in summary

--- a/2-PageSummary/Summary.tex
+++ b/2-PageSummary/Summary.tex
@@ -53,7 +53,7 @@ Shuang Zhang
 %Who is your client? What problem did you have to solve? Why is that problem interesting or important?
 The Lighthouse team collaborated with Microsoft and the Guide Dog Associations to produce applications which can improve the experience of visually impaired users. Since few environments and applications were designed for the huge amount of blind and partly sighted individuals it is difficult for them to move around especially in an unfamiliar environment without assistance. 
 
-Microsoft is both the sponsor and the client in this project and particular field of study was to explore the use cases for wearable sensors in aiding the visually impaired in navigating an indoor environment. Also, the client wanted the team to use low-cost, off-of-shelf hardware in this project and to use a technique called sensor fusion to attain acceptable accuracy.
+Microsoft is both the sponsor and the client in this project and particular field of study was to explore the use cases for wearable sensors in aiding the visually impaired in navigating an indoor environment. Also, the client wanted the team to use low-cost, off-the-shelf hardware in this project and to use a technique called sensor fusion to attain acceptable accuracy.
 
 Finally, Lighthouse team created a platform for dynamic indoor obstacles mapping using wearable sensors. Deliverables included an Obstacle API which allowed for querying for obstacles in an area, an obstacle processing platform and an Android application that collects data and gives users feedback. After testing, the quality of the project meet the client's expectations.
 
