Cut down to 10 pages

--- a/2-PageSummary/Summary.tex
+++ b/2-PageSummary/Summary.tex
@@ -60,11 +60,11 @@ Finally, Lighthouse team created a platform for dynamic indoor obstacles mapping
 \section{Achievements}
 %What software and other artifacts have you delivered?
 \subsection{Obstacle mapping platform}
-The team delivered a platform that gatheres data from sensor and pushes them to the cloud throug a component called the Obstacle API which handles communication between data collection sensors and the processing platform. The obstacle API also provides an interface to query the platform for obstacles in a specified area. 
+The team delivered a platform that gathers data from sensors and pushes them to the cloud through a component called the Obstacle API which handles communication between data collection sensors and the processing platform. The obstacle API also provides an interface to query the platform for obstacles in a specified area. 
 
-The data sent through the Obstacle API is sent through a processing pipeline that performs filtering, aggregation and other steps to produce estimated locations of obstacles in the area. The pipeline is implemented in Apache Kafaka and Apache Spark and uses sensor fusion techniques to increase the accuracy of the obstacle location estimation. 
+The data sent through the Obstacle API is sent through a processing pipeline that performs filtering, aggregation and other steps to produce estimated locations of obstacles in the area. The pipeline is implemented in Apache Kafka and Apache Spark and uses sensor fusion techniques to increase the accuracy of the obstacle location estimation. 
 
-An android application was created to show query the Obstacle API to provide the user with details of obstacles in surrounding area. It showes the obstacles on the map that is centered on the location of the user.
+An android application was created to show query the Obstacle API to provide the user with details of obstacles in surrounding area. It shows the obstacles on the map that is centred on the location of the user.
 
 \subsection{Secondary deliverables}
 The MSc CS students in this team worked on collecting data from sensors and sending the readings through the Obstacle API. The also researched interaction and feedback mechanisms that the client wanted explored.
