--- a/GroupReport/GroupReport-bibfile.bib
+++ b/GroupReport/GroupReport-bibfile.bib
@@ -183,7 +183,14 @@
   note = {Accessed: 2016-09-01}
 }
 
-
+@misc{ECLEmma,
+  author = {Mountainminds GmbH},
+  title = {ECL Emma},
+  year = 2016,
+  howpublished = {\url{http://www.eclemma.org/}},
+  url = {http://www.eclemma.org/},
+  note = {Accessed: 2016-09-03}
+}
 
 @misc{ApacheCassandra,
   author = {The Apache Software Foundation},
